--- a/Back/PlantoesMedicos/package.json
+++ b/Back/PlantoesMedicos/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "date-holidays": "^3.23.16",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
